import { assertEquals } from '@std/assert'
import { assertSnapshot } from '@std/testing/snapshot'
import { NuSh } from '@meop/shire/sh/nu'
import { PowerSh } from '@meop/shire/sh/pwsh'
import { ZSh } from '@meop/shire/sh/zsh'

import { checkSyntax, req } from './_test.ts'
import { runSrv } from './srv.ts'
import { execNativeShell, execScriptShell, getScriptFlavorOpPreamble } from './sh.ts'

// pwsh → nu redirect
Deno.test('pwsh / file / find (redirect)', async (t) => {
  const body = await (await runSrv(req('/sh/pwsh/file/find?sysOsPlat=linux'))).text()
  await assertSnapshot(t, body)
  await checkSyntax('pwsh', body)
})

Deno.test('pwsh / file / sync (redirect)', async (t) => {
  const body = await (await runSrv(req('/sh/pwsh/file/sync?sysOsPlat=linux'))).text()
  await assertSnapshot(t, body)
  await checkSyntax('pwsh', body)
})

Deno.test('pwsh / pack / add (redirect)', async (t) => {
  const body = await (await runSrv(req('/sh/pwsh/pack/add/firefox?sysOsPlat=linux&sysOs=arch'))).text()
  await assertSnapshot(t, body)
  await checkSyntax('pwsh', body)
})

Deno.test('pwsh / pack / find (redirect)', async (t) => {
  const body = await (await runSrv(req('/sh/pwsh/pack/find/firefox?sysOsPlat=linux&sysOs=arch'))).text()
  await assertSnapshot(t, body)
  await checkSyntax('pwsh', body)
})

Deno.test('pwsh / virt / list (redirect)', async (t) => {
  const body = await (await runSrv(req('/sh/pwsh/virt/list?sysOsPlat=linux'))).text()
  await assertSnapshot(t, body)
  await checkSyntax('pwsh', body)
})

// zsh → nu redirect
Deno.test('zsh / file / find (redirect)', async (t) => {
  const body = await (await runSrv(req('/sh/zsh/file/find?sysOsPlat=linux'))).text()
  await assertSnapshot(t, body)
  await checkSyntax('zsh', body)
})

Deno.test('zsh / file / sync (redirect)', async (t) => {
  const body = await (await runSrv(req('/sh/zsh/file/sync?sysOsPlat=linux'))).text()
  await assertSnapshot(t, body)
  await checkSyntax('zsh', body)
})

Deno.test('zsh / pack / add (redirect)', async (t) => {
  const body = await (await runSrv(req('/sh/zsh/pack/add/firefox?sysOsPlat=linux&sysOs=arch'))).text()
  await assertSnapshot(t, body)
  await checkSyntax('zsh', body)
})

Deno.test('zsh / pack / find (redirect)', async (t) => {
  const body = await (await runSrv(req('/sh/zsh/pack/find/firefox?sysOsPlat=linux&sysOs=arch'))).text()
  await assertSnapshot(t, body)
  await checkSyntax('zsh', body)
})

Deno.test('zsh / virt / list (redirect)', async (t) => {
  const body = await (await runSrv(req('/sh/zsh/virt/list?sysOsPlat=linux'))).text()
  await assertSnapshot(t, body)
  await checkSyntax('zsh', body)
})

// --- execNativeShell ---

Deno.test('execNativeShell - linux uses zsh', () => {
  const shell = new NuSh()
  const result = execNativeShell(shell, 'linux', 'echo hello')
  assertEquals(result.startsWith('zsh'), true)
  assertEquals(result.includes('echo hello'), true)
})

Deno.test('execNativeShell - darwin uses zsh', () => {
  const shell = new NuSh()
  const result = execNativeShell(shell, 'darwin', 'echo hello')
  assertEquals(result.startsWith('zsh'), true)
})

Deno.test('execNativeShell - windows uses pwsh', () => {
  const shell = new NuSh()
  const result = execNativeShell(shell, 'windows', 'echo hello')
  assertEquals(result.startsWith('pwsh'), true)
  assertEquals(result.includes('echo hello'), true)
})

Deno.test('execNativeShell - wraps command in nushell literal', () => {
  const shell = new NuSh()
  const result = execNativeShell(shell, 'linux', 'echo hello')
  assertEquals(result.includes("r#'echo hello'#"), true)
})

Deno.test('execNativeShell - special characters are safely wrapped', () => {
  const shell = new NuSh()
  const result = execNativeShell(shell, 'linux', "echo 'single quotes'")
  assertEquals(typeof result, 'string')
  assertEquals(result.length > 0, true)
})

// --- execScriptShell ---

Deno.test('execScriptShell - nu flavor on linux invokes the pinned binary, not bare nu', () => {
  const shell = new ZSh()
  const result = execScriptShell(shell, 'linux', 'nu', 'print hello')
  assertEquals(result.startsWith('"${WUT_HOME}/vendor/nu"'), true)
})

Deno.test('execScriptShell - nu flavor on windows invokes the pinned .exe', () => {
  const shell = new PowerSh()
  const result = execScriptShell(shell, 'windows', 'nu', 'print hello')
  assertEquals(result.startsWith('& "${env:WUT_HOME}/vendor/nu.exe"'), true)
})

Deno.test('execScriptShell - pwsh flavor delegates to execNativeShell', () => {
  const shell = new NuSh()
  assertEquals(
    execScriptShell(shell, 'windows', 'pwsh', 'echo hello'),
    execNativeShell(shell, 'windows', 'echo hello'),
  )
})

Deno.test('execScriptShell - zsh flavor delegates to execNativeShell', () => {
  const shell = new NuSh()
  assertEquals(
    execScriptShell(shell, 'linux', 'zsh', 'echo hello'),
    execNativeShell(shell, 'linux', 'echo hello'),
  )
})

// --- getScriptFlavorOpPreamble ---
// a script is spawned as its own process, so it never inherits this response's own op* helpers unless they are
// loaded into it directly

Deno.test('getScriptFlavorOpPreamble - zsh flavor returns zsh op helpers', async () => {
  const preamble = await getScriptFlavorOpPreamble('zsh')
  assertEquals(preamble.includes('function opPrintWarn'), true)
  assertEquals(preamble.includes('function opPrintMaybeRunCmd'), true)
})

Deno.test('getScriptFlavorOpPreamble - pwsh flavor returns pwsh op helpers', async () => {
  const preamble = await getScriptFlavorOpPreamble('pwsh')
  assertEquals(preamble.includes('function opPrintWarn'), true)
  assertEquals(preamble.includes('function opPrintMaybeRunCmd'), true)
})

Deno.test('getScriptFlavorOpPreamble - nu flavor returns nu op helpers', async () => {
  const preamble = await getScriptFlavorOpPreamble('nu')
  assertEquals(preamble.includes('def opPrintWarn'), true)
  assertEquals(preamble.includes('def opPrintMaybeRunCmd'), true)
})

// script.yaml can gate a pwsh script onto linux, so the preamble follows what the script is written for, not
// what the platform would otherwise reach for — the interpreter execScriptShell picks follows it too
Deno.test('getScriptFlavorOpPreamble - follows the flavor, not the platform', async () => {
  assertEquals((await getScriptFlavorOpPreamble('pwsh')).includes('function opPrintWarn'), true)
  assertEquals((await getScriptFlavorOpPreamble('zsh')).includes('function opPrintWarn'), true)
  assertEquals((await getScriptFlavorOpPreamble('nu')).includes('def jsoncMerge'), true)
})

// a pwsh script spawned from nu receives the switches as env vars, but its op helpers and its own prompts read plain
// variables: before the preamble imported them, --noop ran the commands for real and --yes still asked
Deno.test('pwsh / script preamble / the switches cross into a spawned pwsh script', async () => {
  const marker = await Deno.makeTempFile()
  await Deno.remove(marker)
  const script = await Deno.makeTempFile({ suffix: '.ps1' })
  try {
    await Deno.writeTextFile(
      script,
      [
        await getScriptFlavorOpPreamble('pwsh'),
        `if ($YES) { 'yes' } else { 'asked' }`,
        `opPrintMaybeRunCmd "'ran' | Out-File '${marker}'"`,
      ].join('\n'),
    )
    let result: Deno.CommandOutput
    try {
      result = await new Deno.Command('pwsh', {
        args: ['-NoProfile', '-File', script],
        env: { NOOP: '1', YES: '1', GRAYSCALE: '1' },
        stdout: 'piped',
      }).output()
    } catch (e) {
      if (e instanceof Deno.errors.NotFound) {
        return
      }
      throw e
    }
    assertEquals(new TextDecoder().decode(result.stdout).split('\n')[0].trim(), 'yes')
    assertEquals(await Deno.stat(marker).then(() => true).catch(() => false), false)
  } finally {
    await Deno.remove(script)
    await Deno.remove(marker).catch(() => {})
  }
})
