export const snapshot = {};

snapshot[`pwsh / file / find (redirect) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu" --no-config-file -c 'try {
try {
\$env.REQ_URL_SH = r#''http://x/sh/nu/file/find?sysOsPlat=linux&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
# a ctrl-c fires once: if it cuts the removal short, the second one runs
let cut = (try { rm --force --permanent \$scriptFilePath; null } catch { |e| rm --force --permanent \$scriptFilePath; \$e })
# the script reported its own failure; this passes on its exit code
if \$failure != null { \$failure.raw }
if \$cut != null { \$cut.raw }


} catch { |e|
  if (\$e.debug | str starts-with ''Interrupted '') or (\$e.details.code? == ''nu::shell::io::interrupted'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}
} catch { |e|
  if (\$e.debug | str starts-with ''Interrupted '') or (\$e.details.code? == ''nu::shell::io::interrupted'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}'\`
`;

snapshot[`pwsh / file / sync (redirect) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu" --no-config-file -c 'try {
try {
\$env.REQ_URL_SH = r#''http://x/sh/nu/file/sync?sysOsPlat=linux&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
# a ctrl-c fires once: if it cuts the removal short, the second one runs
let cut = (try { rm --force --permanent \$scriptFilePath; null } catch { |e| rm --force --permanent \$scriptFilePath; \$e })
# the script reported its own failure; this passes on its exit code
if \$failure != null { \$failure.raw }
if \$cut != null { \$cut.raw }


} catch { |e|
  if (\$e.debug | str starts-with ''Interrupted '') or (\$e.details.code? == ''nu::shell::io::interrupted'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}
} catch { |e|
  if (\$e.debug | str starts-with ''Interrupted '') or (\$e.details.code? == ''nu::shell::io::interrupted'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}'\`
`;

snapshot[`pwsh / pack / add (redirect) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu" --no-config-file -c 'try {
try {
\$env.REQ_URL_SH = r#''http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
# a ctrl-c fires once: if it cuts the removal short, the second one runs
let cut = (try { rm --force --permanent \$scriptFilePath; null } catch { |e| rm --force --permanent \$scriptFilePath; \$e })
# the script reported its own failure; this passes on its exit code
if \$failure != null { \$failure.raw }
if \$cut != null { \$cut.raw }


} catch { |e|
  if (\$e.debug | str starts-with ''Interrupted '') or (\$e.details.code? == ''nu::shell::io::interrupted'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}
} catch { |e|
  if (\$e.debug | str starts-with ''Interrupted '') or (\$e.details.code? == ''nu::shell::io::interrupted'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}'\`
`;

snapshot[`pwsh / pack / find (redirect) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu" --no-config-file -c 'try {
try {
\$env.REQ_URL_SH = r#''http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
# a ctrl-c fires once: if it cuts the removal short, the second one runs
let cut = (try { rm --force --permanent \$scriptFilePath; null } catch { |e| rm --force --permanent \$scriptFilePath; \$e })
# the script reported its own failure; this passes on its exit code
if \$failure != null { \$failure.raw }
if \$cut != null { \$cut.raw }


} catch { |e|
  if (\$e.debug | str starts-with ''Interrupted '') or (\$e.details.code? == ''nu::shell::io::interrupted'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}
} catch { |e|
  if (\$e.debug | str starts-with ''Interrupted '') or (\$e.details.code? == ''nu::shell::io::interrupted'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}'\`
`;

snapshot[`pwsh / virt / list (redirect) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu" --no-config-file -c 'try {
try {
\$env.REQ_URL_SH = r#''http://x/sh/nu/virt/list?sysOsPlat=linux&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
# a ctrl-c fires once: if it cuts the removal short, the second one runs
let cut = (try { rm --force --permanent \$scriptFilePath; null } catch { |e| rm --force --permanent \$scriptFilePath; \$e })
# the script reported its own failure; this passes on its exit code
if \$failure != null { \$failure.raw }
if \$cut != null { \$cut.raw }


} catch { |e|
  if (\$e.debug | str starts-with ''Interrupted '') or (\$e.details.code? == ''nu::shell::io::interrupted'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}
} catch { |e|
  if (\$e.debug | str starts-with ''Interrupted '') or (\$e.details.code? == ''nu::shell::io::interrupted'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}'\`
`;

snapshot[`zsh / file / find (redirect) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c 'try {
try {
\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/file/find?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
# a ctrl-c fires once: if it cuts the removal short, the second one runs
let cut = (try { rm --force --permanent \$scriptFilePath; null } catch { |e| rm --force --permanent \$scriptFilePath; \$e })
# the script reported its own failure; this passes on its exit code
if \$failure != null { \$failure.raw }
if \$cut != null { \$cut.raw }


} catch { |e|
  if (\$e.debug | str starts-with '\\\\''Interrupted '\\\\'') or (\$e.details.code? == '\\\\''nu::shell::io::interrupted'\\\\'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}
} catch { |e|
  if (\$e.debug | str starts-with '\\\\''Interrupted '\\\\'') or (\$e.details.code? == '\\\\''nu::shell::io::interrupted'\\\\'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}'\`
`;

snapshot[`zsh / file / sync (redirect) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c 'try {
try {
\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/file/sync?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
# a ctrl-c fires once: if it cuts the removal short, the second one runs
let cut = (try { rm --force --permanent \$scriptFilePath; null } catch { |e| rm --force --permanent \$scriptFilePath; \$e })
# the script reported its own failure; this passes on its exit code
if \$failure != null { \$failure.raw }
if \$cut != null { \$cut.raw }


} catch { |e|
  if (\$e.debug | str starts-with '\\\\''Interrupted '\\\\'') or (\$e.details.code? == '\\\\''nu::shell::io::interrupted'\\\\'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}
} catch { |e|
  if (\$e.debug | str starts-with '\\\\''Interrupted '\\\\'') or (\$e.details.code? == '\\\\''nu::shell::io::interrupted'\\\\'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}'\`
`;

snapshot[`zsh / pack / add (redirect) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c 'try {
try {
\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
# a ctrl-c fires once: if it cuts the removal short, the second one runs
let cut = (try { rm --force --permanent \$scriptFilePath; null } catch { |e| rm --force --permanent \$scriptFilePath; \$e })
# the script reported its own failure; this passes on its exit code
if \$failure != null { \$failure.raw }
if \$cut != null { \$cut.raw }


} catch { |e|
  if (\$e.debug | str starts-with '\\\\''Interrupted '\\\\'') or (\$e.details.code? == '\\\\''nu::shell::io::interrupted'\\\\'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}
} catch { |e|
  if (\$e.debug | str starts-with '\\\\''Interrupted '\\\\'') or (\$e.details.code? == '\\\\''nu::shell::io::interrupted'\\\\'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}'\`
`;

snapshot[`zsh / pack / find (redirect) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c 'try {
try {
\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
# a ctrl-c fires once: if it cuts the removal short, the second one runs
let cut = (try { rm --force --permanent \$scriptFilePath; null } catch { |e| rm --force --permanent \$scriptFilePath; \$e })
# the script reported its own failure; this passes on its exit code
if \$failure != null { \$failure.raw }
if \$cut != null { \$cut.raw }


} catch { |e|
  if (\$e.debug | str starts-with '\\\\''Interrupted '\\\\'') or (\$e.details.code? == '\\\\''nu::shell::io::interrupted'\\\\'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}
} catch { |e|
  if (\$e.debug | str starts-with '\\\\''Interrupted '\\\\'') or (\$e.details.code? == '\\\\''nu::shell::io::interrupted'\\\\'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}'\`
`;

snapshot[`zsh / virt / list (redirect) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c 'try {
try {
\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/virt/list?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
# a ctrl-c fires once: if it cuts the removal short, the second one runs
let cut = (try { rm --force --permanent \$scriptFilePath; null } catch { |e| rm --force --permanent \$scriptFilePath; \$e })
# the script reported its own failure; this passes on its exit code
if \$failure != null { \$failure.raw }
if \$cut != null { \$cut.raw }


} catch { |e|
  if (\$e.debug | str starts-with '\\\\''Interrupted '\\\\'') or (\$e.details.code? == '\\\\''nu::shell::io::interrupted'\\\\'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}
} catch { |e|
  if (\$e.debug | str starts-with '\\\\''Interrupted '\\\\'') or (\$e.details.code? == '\\\\''nu::shell::io::interrupted'\\\\'') or (\$e.exit_code? in [130, -2, -1073741510]) {
    exit 130
  }
  \$e.raw
}'\`
`;
